autoprefixer updates to style.css file, content updates to README file, bug resolved that was causing EDIT and DELETE buttons in Categories form to be misaligned

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,28 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /* Body / Main / Base Content */
 body {
     background-color: #f0efef;
     color: #5a5a5a;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     min-height: 100vh;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 main {
-    flex: 1 0 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 auto;
+            flex: 1 0 auto;
     min-height: 50vh;
 }
 
@@ -24,6 +38,8 @@ hr {
     border: 0;
     height: 1px;
     background-color: rgb(90, 89, 89);
+    background-image: -webkit-gradient(linear, left top, right top, from(#ccc), color-stop(rgb(192, 192, 192)), to(#ccc));
+    background-image: -o-linear-gradient(left, #ccc, rgb(192, 192, 192), #ccc);
     background-image: linear-gradient(to right, #ccc, rgb(192, 192, 192), #ccc);
 }
 
@@ -47,13 +63,15 @@ i.material-icons {
     background-color: #cddc39;
     color: #444444;
     border: 1px solid rgb(185, 182, 182);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 .homepage-signin-btn:hover {
     background-color: #b4c013;
     border: 1px solid rgb(94, 92, 92);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     background-color: #b4c013;
 }
 
@@ -61,30 +79,35 @@ i.material-icons {
     background-color: #275a94ab;
     color: #fff;
     border: 1px solid rgb(185, 182, 182);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 .homepage-signup-btn:hover {
     background: #1e4777ab;
     border: 1px solid rgb(94, 92, 92);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 a.cancel-btn {
     color: rgba(219, 92, 8, 0.829);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     border: 1px solid rgb(185, 182, 182);
     border-radius: 8px;
 }
 
 a.cancel-btn:hover {
     border: 1px solid rgb(94, 92, 92);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 .submit-btn {
     background-color: #cddc39;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     color: #444444;
     border: 1px solid rgb(185, 182, 182);
     border-radius: 8px;
@@ -93,31 +116,36 @@ a.cancel-btn:hover {
 .submit-btn:hover {
     background-color: #b4c013;
     border: 1px solid rgb(94, 92, 92);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 a.edit-btn {
     color: rgba(2, 134, 81, 0.719);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     border: 1px solid rgb(185, 182, 182);
     border-radius: 8px;
 }
 
 a.edit-btn:hover {
     border: 1px solid rgb(94, 92, 92);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 a.delete-btn {
     color: rgba(173, 26, 26, 0.685);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     border: 1px solid rgb(185, 182, 182);
     border-radius: 8px;
 }
 
 a.delete-btn:hover {
     border: 1px solid rgb(94, 92, 92);
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 /* Homepage */
